# ferrum

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml.example  docker-compose.yaml
ferrum-ql/: Cargo.toml
ferrum-ql/benches/: parse.rs
ferrum-ql/src/: ast.rs  error.rs  grammar.lalrpop  lib.rs
ferum-ql/: Cargo.toml
ferum-ql/src/: ast.rs  lib.rs
logs/: Cargo.toml  build.rs  config.yaml.example
logs/raft-proto/: raft.proto
logs/src/: config.rs  main.rs  util.rs
logs/src/io/: mod.rs
logs/src/io/fs/: local.rs  mod.rs
logs/src/io/query/: fql.rs  mod.rs  sql.rs
logs/src/io/tables/: generic.rs  log_attributes.rs  logs.rs  mod.rs
logs/src/io/writer/: mod.rs
logs/src/raft/: mod.rs  network.rs  storage.rs
logs/src/redb/: mod.rs
logs/src/server/: grpc.rs  http.rs  mod.rs
logs/src/server/grpc/: mod.rs  opentelemetry.rs  raft.rs
logs/src/server/http/: fql.rs  handlers.rs  mod.rs  router.rs  schemas.rs  sql.rs
logs/src/server/http/loki/: handlers.rs  router.rs  schemas.rs
logs/src/server/http/query/: handlers.rs  mod.rs  router.rs  schemas.rs
logs/src/server/opentelemetry/: mod.rs
logs/src/udfs/: user.rs
object-store/: Cargo.toml
object-store/src/: config.rs  error.rs  lib.rs
query-engine/: Cargo.toml
query-engine/src/: error.rs  fql.rs  lib.rs  sql.rs
utils/: Cargo.toml
utils/src/: lib.rs
