[workspace]
resolver = "2"
members = [
    "ferrum-ql",
    "logs",
    "object-store", "query-engine", "utils",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
strip = true
debug = false
incremental = false

[workspace.dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
dashmap = "7.0.0-rc2"
datafusion = "46.0.1"
jemallocator = "0.5.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
