[package]
name = "ferrum-logs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-raft = "0.6.1"
axum = "0.8.1"
arrow-json = "54.2.1"
chrono.workspace = true
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
dashmap.workspace = true
datafusion.workspace = true
ferrum-ql = { path = "../ferrum-ql" }
futures.workspace = true
jemallocator.workspace = true
log = "0.4.26"
num_cpus = "1.16.0"
object-store = { path = "../object-store" }
prost = "0.13.5"
redb = "2.4.0"
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.13"
tonic = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"
